@@ -217,6 +217,19 @@ class t3lib_extFileFunctions extends t3lib_basicFileFunctions	{
 
 		if (is_array($this->fileCmdMap))	{
 
+				// Check if there were uploads expected, but no one made
+			if ($this->fileCmdMap['upload'])	{
+				$uploads = $this->fileCmdMap['upload'];
+				foreach ($uploads as $arr)	{
+					if (!$_FILES['upload_'.$arr['data']]['name'])	{
+						unset($this->fileCmdMap['upload'][$arr['data']]);
+					}
+				}
+				if (count($this->fileCmdMap['upload']) == 0) {
+					$this->writelog(1,1,108,'No file was uploaded!','');
+				}
+			}
+				
 				// Traverse each set of actions
 			foreach($this->fileCmdMap as $action => $actionData)	{
 
@@ -811,7 +824,7 @@ class t3lib_extFileFunctions extends t3lib_basicFileFunctions	{
 					} else $this->writelog(1,1,104,'The uploaded file exceeds the size-limit of %s bytes',Array($this->maxUploadFileSize*1024));
 				} else $this->writelog(1,1,105,'You are not allowed to upload files!','');
 			} else $this->writelog(1,2,106,'The uploaded file did not exist!','');
-		} else $this->writelog(1,2,106,'No file was uploaded!','');
+		} else $this->writelog(1,2,108,'No file was uploaded!','');
 	}
 
 	/**
